<resources>
    <string name="app_name">Material Test</string>


    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="skills">Skills</string>
    <string name="projects">Projects</string>
    <string name="work">Work</string>
    <string name="social">Social</string>
    <string name="title_activity_sub">SubActivity</string>


    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

</resources>
