<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="Home"
        android:icon="@drawable/ic_home_black_24dp"/>

    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:icon="@drawable/ic_account_circle_black_24dp"/>
    <item
        android:id="@+id/skills"
        android:title="@string/skills"
        android:icon="@drawable/ic_build_black_24dp"/>
    <item
        android:id="@+id/projects"
        android:title="@string/projects"
        android:icon="@drawable/ic_work_black_24dp"/>
    <item
        android:id="@+id/work"
        android:title="@string/work"
        android:icon="@drawable/ic_business_black_24dp"/>

    <item android:id="@+id/social"
        android:title="@string/social"
        android:icon="@drawable/ic_plus_one_black_24dp"/>"
</menu>